--- a/static/css/sb-admin-2.css
+++ b/static/css/sb-admin-2.css
@@ -4677,6 +4677,11 @@ input[type="button"].btn-block {
   margin-bottom: 0.75rem;
 }
 
+.scroll {
+  max-height: 100px;
+  overflow-y: auto;
+}
+
 @media (min-width: 576px) {
   .card-columns {
     -moz-column-count: 3;
@@ -11279,3 +11284,6 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+
+
+
