--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -497,6 +497,7 @@
                                             <th>Manage</th>
                                             <th>
                                                 <a class="btn btn-primary btn-sm btn-block text-center" href=""></a>
+                                                <!-- Need to make a third collumn that is used to edit projects-->
                                             </th>
                                         </tr>
                                 
