added all pages for BT

--- a/accounts/templates/accounts/create_tickets.html
+++ b/accounts/templates/accounts/create_tickets.html
@@ -70,17 +70,36 @@
                             <tr>
                                 <form>
                                     <div class="form-group row">
-                                    <label for="tickets" class="col-sm-2 col-form-label">Title</label>
+                                    <label for="projects_name" class="col-sm-2 col-form-label">Title</label>
                                     <div class="col-sm-10">
-                                        <input type="text" readonly class="form-control-plaintext" id="tickets" value="">
+                                        <input type="text" class="form-control" id="projects_name" placeholder="">
                                     </div>
                                     </div>
                                     <div class="form-group row">
-                                    <label for="description" class="col-m-3 col-form-label">Description</label>
-                                    <div class="col-sm-10">
-                                        <input type="password" class="form-control" id="description" placeholder="">
+                                        <label for="project_description" class="col-m-3 col-form-label">Description</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" id="project_description" placeholder="">
+                                        </div>
                                     </div>
+                                    <div class="form-group row">
+                                        <label for="project_status" class="col-lg-3 col-form-label">Status</label>
+                                        <div class="dropdown no-arrow">
+                                            <a class="btn btn-info" href="#" role="button" id="dropdownMenuLink"
+                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select
+                                            </a>
+                                            <div class="dropdown-menu dropdown-menu shadow animated--fade-in"
+                                                aria-labelledby="dropdownMenuLink">
+                                                <div class="dropdown-header">Dropdown Header:</div>
+                                                <a class="dropdown-item" href="#">Action</a>
+                                                <a class="dropdown-item" href="#">Another action</a>
+                                                <a class="dropdown-item" href="#">Something else here</a>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <fieldset enable>
+                                        <!--Add form here-->
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                      </fieldset>
                                 </form>
                             </tr>
                     
@@ -90,41 +109,6 @@
             </div>
 
 
-             <!-- Bar Chart -->
-            <div class="col-xl-8 col-lg-7">
-                <div class="card shadow mb-4">
-                    <!-- Card Header - Dropdown -->
-                    <div
-                        class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold text-primary">Tickets By Category</h6>
-                        <div class="dropdown no-arrow">
-                            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                aria-labelledby="dropdownMenuLink">
-                                <div class="dropdown-header">Dropdown Header:</div>
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Card Body -->
-                    <div class="card shadow mb-4">
-                        <div class="card-body">
-                            <form>
-                                <fieldset disabled>
-                                  <!--Add form here-->
-                                  <button type="submit" class="btn btn-primary">Submit</button>
-                                </fieldset>
-                              </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
         <!-- End of Main Content -->
 
