--- a/accounts/templates/accounts/remove_roles.html
+++ b/accounts/templates/accounts/remove_roles.html
@@ -40,16 +40,55 @@
             {% include 'accounts/topbar.html' %}
             <!--End Top Bar-->
 
-
-            <div class="col-md">
-                <div class="card card-body card-header">
-                    <h5>Remove Roles</h5>
-                    <hr>
-                    <p>User List: </p>
-                    <p>Remove from Roles: </p>
+            <div class="col-xl-4 col-lg-5">
+                <div class="card shadow mb-4">
+                    <!-- Card Header - Dropdown -->
+                    <div
+                        class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                        <h6 class="m-0 font-weight-bold text-primary">Remove Roles</h6>
+                        <div class="dropdown no-arrow">
+                            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                                aria-labelledby="dropdownMenuLink">
+                                <div class="dropdown-header">Dropdown Header:</div>
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card Body -->
+                    <div class="card card-body">
+                        <table class="table table-sm">
+                            <tr>
+                                <form>
+                                    <div class="form-group row">
+                                    <label for="user" class="col-sm-2 col-form-label">User</label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-dropdown" id="user" placeholder="">
+                                    </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="user_roles" class="col-m-3 col-form-label">Roles</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-dropdown" id="user_roles" placeholder="">
+                                        </div>
+                                    </div>
+                                    <fieldset enable>
+                                        <!--Add form here-->
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                      </fieldset>
+                                </form>
+                            </tr>
+                    
+                        </table>
+                    </div>
                 </div>
             </div>
-        
         
         </div>
         <!-- End of Main Content -->
