--- a/accounts/templates/accounts/assign_users.html
+++ b/accounts/templates/accounts/assign_users.html
@@ -45,7 +45,7 @@
                     <!-- Card Header - Dropdown -->
                     <div
                         class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold text-primary">Assign Roles</h6>
+                        <h6 class="m-0 font-weight-bold text-primary">Assign Users</h6>
                         <div class="dropdown no-arrow">
                             <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -67,13 +67,13 @@
                             <tr>
                                 <form>
                                     <div class="form-group row">
-                                    <label for="user" class="col-sm-2 col-form-label">User</label>
+                                    <label for="user" class="col-sm-2 col-form-label">Users</label>
                                     <div class="col-sm-10">
                                         <input type="text" class="form-dropdown" id="user" placeholder="">
                                     </div>
                                     </div>
                                     <div class="form-group row">
-                                        <label for="user_roles" class="col-m-3 col-form-label">Roles</label>
+                                        <label for="user_roles" class="col-m-3 col-form-label">Projects</label>
                                         <div class="col-sm-10">
                                             <input type="text" class="form-dropdown" id="user_roles" placeholder="">
                                         </div>
