--- a/accounts/templates/accounts/create_projects.html
+++ b/accounts/templates/accounts/create_projects.html
@@ -40,12 +40,14 @@
             {% include 'accounts/topbar.html' %}
             <!--End Top Bar-->
 
+
+            <!-- Create Tickets -->
             <div class="col-xl-4 col-lg-5">
                 <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div
                         class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold text-primary">Assign Roles</h6>
+                        <h6 class="m-0 font-weight-bold text-primary">New Projects</h6>
                         <div class="dropdown no-arrow">
                             <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -67,15 +69,30 @@
                             <tr>
                                 <form>
                                     <div class="form-group row">
-                                    <label for="user" class="col-sm-2 col-form-label">User</label>
+                                    <label for="projects_name" class="col-sm-2 col-form-label">Title</label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-dropdown" id="user" placeholder="">
+                                        <input type="text" class="form-control" id="projects_name" placeholder="">
                                     </div>
                                     </div>
                                     <div class="form-group row">
-                                        <label for="user_roles" class="col-m-3 col-form-label">Roles</label>
+                                        <label for="project_description" class="col-m-3 col-form-label">Description</label>
                                         <div class="col-sm-10">
-                                            <input type="text" class="form-dropdown" id="user_roles" placeholder="">
+                                            <input type="text" class="form-control" id="project_description" placeholder="">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="project_status" class="col-lg-3 col-form-label">Status</label>
+                                        <div class="dropdown no-arrow">
+                                            <a class="btn btn-info" href="#" role="button" id="dropdownMenuLink"
+                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select
+                                            </a>
+                                            <div class="dropdown-menu dropdown-menu shadow animated--fade-in"
+                                                aria-labelledby="dropdownMenuLink">
+                                                <div class="dropdown-header">Dropdown Header:</div>
+                                                <a class="dropdown-item" href="#">Action</a>
+                                                <a class="dropdown-item" href="#">Another action</a>
+                                                <a class="dropdown-item" href="#">Something else here</a>
+                                            </div>
                                         </div>
                                     </div>
                                     <fieldset enable>
@@ -89,8 +106,8 @@
                     </div>
                 </div>
             </div>
-        
-        </div>
+
+
         <!-- End of Main Content -->
 
         <!-- Footer -->
