--- a/accounts/templates/accounts/my_tickets.html
+++ b/accounts/templates/accounts/my_tickets.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -40,12 +41,14 @@
             {% include 'accounts/topbar.html' %}
             <!--End Top Bar-->
 
-            <div class="col-xl-4 col-lg-5">
+
+             <!-- Bar Chart -->
+            <div class="col-xl-8 col-lg-7">
                 <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div
                         class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold text-primary">Assign Roles</h6>
+                        <h6 class="m-0 font-weight-bold text-primary">My Tickets List</h6>
                         <div class="dropdown no-arrow">
                             <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -62,35 +65,14 @@
                         </div>
                     </div>
                     <!-- Card Body -->
-                    <div class="card card-body">
-                        <table class="table table-sm">
-                            <tr>
-                                <form>
-                                    <div class="form-group row">
-                                    <label for="user" class="col-sm-2 col-form-label">User</label>
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-dropdown" id="user" placeholder="">
-                                    </div>
-                                    </div>
-                                    <div class="form-group row">
-                                        <label for="user_roles" class="col-m-3 col-form-label">Roles</label>
-                                        <div class="col-sm-10">
-                                            <input type="text" class="form-dropdown" id="user_roles" placeholder="">
-                                        </div>
-                                    </div>
-                                    <fieldset enable>
-                                        <!--Add form here-->
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                      </fieldset>
-                                </form>
-                            </tr>
-                    
-                        </table>
+                    <div class="card shadow mb-4">
+                        <div class="card-body">
+                            All Tickets List
+                        </div>
                     </div>
                 </div>
             </div>
-        
-        </div>
+
         <!-- End of Main Content -->
 
         <!-- Footer -->
