--- a/accounts/templates/accounts/ticket_details.html
+++ b/accounts/templates/accounts/ticket_details.html
@@ -51,7 +51,7 @@
                             <div class="row">
                                 <div class="col-md">
                                     <div class="card card-body">
-                                        <h5>Tickets</h5>
+                                        <h6 class="m-0 font-weight-bold text-primary">Tickets</h6>
                                     </div>
                                     <div class="card card-body">
                                         <table class="table">
@@ -75,7 +75,7 @@
                         <div class="card shadow mb-4">
                             <!-- Card Header - Dropdown -->
                             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                <h6 class="m-0 font-weight-bold text-primary">Projects</h6>
+                                <h6 class="m-0 font-weight-bold text-primary">Status</h6>
                                 <div class="dropdown no-arrow">
                                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -95,9 +95,19 @@
                             <div class="card card-body">
                                 <table class="table table-md">
                                     <tr>
-                                        <th>Name</th>
                                         <th>Status</th>
-                                        <th>Manage</th>
+                                    </tr>
+                                    <tr>
+                                        <th>Status</th>
+                                    </tr>
+                                    <tr>
+                                        <th>Status</th>
+                                    </tr>
+                                    <tr>
+                                        <th>Status</th>
+                                    </tr>
+                                    <tr>
+                                        <th>Status</th>
                                     </tr>
                                     {% for i in projects %}
                                         <tr>
@@ -123,7 +133,7 @@
                             <div class="row">
                                 <div class="col-md">
                                     <div class="card card-body">
-                                        <h5>Description</h5>
+                                        <h6 class="m-0 font-weight-bold text-primary">Description</h6>
                                     </div>
                                     <div class="card card-body">
                                         <table class="table">
@@ -145,9 +155,11 @@
                     </div>
                 </div>    
             </div>
-
+            
             
     <!-- End of Content Wrapper -->
+
+    
 
 </div>
 <!-- End of Page Wrapper -->
