--- a/accounts/templates/accounts/ticket_details.html
+++ b/accounts/templates/accounts/ticket_details.html
@@ -98,16 +98,16 @@
                                         <table class="table">
                                             <tr>
                                                 <th>Submitter</th>
+                                                <th>Project</th>
                                                 <th>Status</th>
-                                                <th>description</th>
                                                 <th>Date</th>
                                             </tr>
     
                                             {% for i in tickets %}
                                                 <tr>
                                                     <td>{{i.name}}</td>
+                                                    <td>{{i.project}}</td>
                                                     <td>{{i.status}}</td>
-                                                    <td>{{i.description}}</td>
                                                     <td>{{i.date_created}}</td>
                                                 </tr>
                                             {% endfor %}
