--- a/accounts/templates/accounts/project_details.html
+++ b/accounts/templates/accounts/project_details.html
@@ -60,9 +60,10 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Project Name</h6> 
                                     <table class="table">
 
-                                        {% for i in tickets %}
+                                        {% for i in Project %}
                                             <tr>
                                                 <th>{{i.name}}</th>
+                                            </tr>
                                         {% endfor %}
                                         
                                     </table>
@@ -76,7 +77,7 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Description</h6> 
                                     <table class="table">
 
-                                        {% for i in tickets %}
+                                        {% for i in Project %}
                                             <tr>
                                                 <th>{{i.description}}</th>
                                             </tr>
@@ -102,9 +103,9 @@
                                                 <th>Date</th>
                                             </tr>
     
-                                            {% for i in tickets %}
+                                            {% for i in Project %}
                                                 <tr>
-                                                    <td>{{i.name}}</td>
+                                                    <td>{{i.member}}</td>
                                                     <td>{{i.status}}</td>
                                                     <td>{{i.date_created}}</td>
                                                 </tr>
@@ -118,29 +119,40 @@
 
                         </div>
 
-                        <div class="col-lg-6">
-
-                            <div class="card shadow mb-4">
-                                <div class="card shadow mb-4">
-                                    <div class="card card-body">
-                                        <h6 class="m-0 font-weight-bold text-primary">Tickets</h6> 
-                                        <table class="table">
-                                            <tr>
-                                                <th>Project Tickets</th>
-                                            </tr>
-    
-                                            {% for i in tickets %}
-                                                <tr>
-                                                    <td>{{i.ticket}}</td>
-                                                </tr>
-                                            {% endfor %}
-                                            
-                                        </table>
-    
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-3"></div>
+                                    <div class="col-xl-13 col-lg-12">
+                                            <div class="card shadow mb-4">
+                                                <!-- Card Header - Dropdown -->
+                                                <div class="row">
+                                                    <div class="col-md">
+                                                        <div class="card card-body">
+                                                            <h5>Tickets</h5>
+                                                        </div>
+                                                        <div class="card card-body">
+                                                            <table class="table">
+                                                                <tr>
+                                                                    <th>Name</th>
+                                                                    <th>Status</th>
+                                                                    <th>description</th>
+                                                                </tr>
+                                        
+                                                                {% for ticket in tickets %}
+                                                                    <tr>
+                                                                        <td>{{ticket.name}}</td>
+                                                                        <td>{{ticket.status}}</td>
+                                                                        <td>{{ticket.description}}</td>
+                                                                    </tr>
+                                                                {% endfor %}
+                                                                
+                                                            </table>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                     </div>
-                                </div>
-                            </div>
-
+                            </div>    
                         </div>
 
                     </div>
