--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -221,7 +221,7 @@
                                             <tr>
                                                 <td>{{i.name}}</td>
                                                 <td>{{i.status}}</td>
-                                                <td><a href=""><i class="far fa-edit"></i></a><td>
+                                                <td><a href="{% url 'project_details' i.id %}"><i class="far fa-edit"></i></a><td>
                                             </tr>
                                         {% endfor %}
                                 
