--- a/accounts/templates/accounts/create_projects.html
+++ b/accounts/templates/accounts/create_projects.html
@@ -44,69 +44,16 @@
             <div class="container">
                 <div class="row">
                    <div class="col-lg-3"></div>
-                        <!-- Create Tickets -->
+                        <!-- Create Project -->
                         <div class="col-xl-6 col-lg-10">
                             <div class="card shadow mb-4">
-                                <!-- Card Header - Dropdown -->
-                                <div
-                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">New Projects</h6>
-                                    <div class="dropdown no-arrow">
-                                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                            aria-labelledby="dropdownMenuLink">
-                                            <div class="dropdown-header">Dropdown Header:</div>
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Card Body -->
-                                <div class="card card-body">
-                                    <table class="table table-sm">
-                                        <tr>
-                                            <form>
-                                                <div class="form-group row">
-                                                <label for="projects_name" class="col-sm-2 col-form-label">Title</label>
-                                                <div class="col-sm-10">
-                                                    <input type="text" class="form-control" id="projects_name" placeholder="">
-                                                </div>
-                                                </div>
-                                                <div class="form-group row">
-                                                    <label for="project_description" class="col-m-3 col-form-label">Description</label>
-                                                    <div class="col-sm-10">
-                                                        <input type="text" class="form-control" id="project_description" placeholder="">
-                                                    </div>
-                                                </div>
-                                                <div class="form-group row">
-                                                    <label for="project_status" class="col-lg-3 col-form-label">Status</label>
-                                                    <div class="dropdown no-arrow">
-                                                        <a class="btn btn-info" href="#" role="button" id="dropdownMenuLink"
-                                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select
-                                                        </a>
-                                                        <div class="dropdown-menu dropdown-menu shadow animated--fade-in"
-                                                            aria-labelledby="dropdownMenuLink">
-                                                            <div class="dropdown-header">Dropdown Header:</div>
-                                                            <a class="dropdown-item" href="#">Action</a>
-                                                            <a class="dropdown-item" href="#">Another action</a>
-                                                            <a class="dropdown-item" href="#">Something else here</a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <fieldset enable>
-                                                    <!--Add form here-->
-                                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                                </fieldset>
-                                            </form>
-                                        </tr>
-                                
-                                    </table>
-                                </div>
+                                <form action="" method="POST">
+
+                                    {% csrf_token %}
+                                    {{form}}
+
+                                    <input type="submit" name="Submit">
+                                </form>
                             </div>
                         </div>
                    <div class="col-lg-3"></div>
