--- a/accounts/templates/accounts/project_details.html
+++ b/accounts/templates/accounts/project_details.html
@@ -49,7 +49,6 @@
 
                     <!-- Page Heading -->
                     <h1 class="h3 mb-4 text-gray-800">Project Details</h1>
-
                     <div class="row">
 
                         <div class="col-lg-6">
@@ -57,13 +56,16 @@
                             <!-- Circle Buttons -->
                             <div class="card shadow mb-4">
                                 <div class="card card-body">
-                                    <h6 class="m-0 font-weight-bold text-primary">Project Name</h6> 
                                     <table class="table">
-
-                                            <tr>
-                                                <th>{{project_details.name}}</th>
-                                            </tr>
-                                        
+                                        <th><h6 class="m-0 font-weight-bold text-primary">Project Name</h6></th>
+                                        <th><h6 class="m-0 font-weight-bold text-primary">Update</h6></th> 
+                                        <th><h6 class="m-0 font-weight-bold text-primary">Delete</h6></th>
+                                    </table>
+                                    <table>
+                                        <tr>
+                                            <th>{{project_details.name}}</th>
+                                            <!--ADD UPDATE AND DELETE BUTTON TO PROJECT DETAILS-->
+                                        </tr>
                                     </table>
 
                                 </div>
@@ -123,7 +125,7 @@
                                                 <div class="row">
                                                     <div class="col-md">
                                                         <div class="card card-body">
-                                                            <h5>Tickets</h5>
+                                                            <h6 class="m-0 font-weight-bold text-primary">Tickets</h6>
                                                         </div>
                                                         <div class="card card-body">
                                                             <table class="table">
