--- a/accounts/templates/accounts/view_projects.html
+++ b/accounts/templates/accounts/view_projects.html
@@ -59,6 +59,7 @@
                                                             <th>Name</th>
                                                             <th>Status</th>
                                                             <th>description</th>
+                                                            <th>Manage</th>
                                                         </tr>
                                 
                                                         {% for i in projects %}
@@ -66,6 +67,7 @@
                                                                 <td>{{i.name}}</td>
                                                                 <td>{{i.status}}</td>
                                                                 <td>{{i.description}}</td>
+                                                                <td><a href="{% url 'project_details' i.id %}"><i class="far fa-edit"></i></a><td>
                                                             </tr>
                                                         {% endfor %}
                                                         
