added search components and filters

--- a/accounts/templates/accounts/view_projects.html
+++ b/accounts/templates/accounts/view_projects.html
@@ -53,6 +53,16 @@
                                                 <div class="card card-body">
                                                     <h5>Projects</h5>
                                                 </div>
+                                                <form method="get">
+                                                    <div class="input-group">
+                
+                                                        {{myFilter.form}}
+                                                        <button class="btn btn-primary" type="submit">
+                                                            <i class="fas fa-search fa-sm"></i>
+                                                        </button>
+
+                                                    </div>
+                                                </form>
                                                 <div class="card card-body">
                                                     <table class="table">
                                                         <tr>
